# AdventOfCode1

./: .gitignore  README.md
.github/workflows/: badges.yml
2021/python/day09/: day09.py
2022/python/: AoC.yaml  __init__.py  requirements.txt
2022/python/day01/: day01.py
2022/python/day02/: day02.py
2022/python/day03/: day03.py
2022/python/day04/: day04.py
2022/python/day05/: day05.py
2022/python/day06/: day06.py
2022/python/day07/: day07.py
2022/python/day08/: day08.py
2022/python/day09/: day09.py
2022/python/day10/: day10.py
2022/python/day11/: day11.py
2022/python/day12/: day12.py
2022/python/day13/: day13.py
2022/python/day14/: day14.py
2022/python/day15/: day15.py
2022/python/day16/: day16.py
2022/python/day17/: day17.py
2022/python/day18/: day18.py
2022/python/day19/: day19.py
2022/python/day20/: day20.py
2022/rust/: Cargo.toml
2022/rust/SantasLittleHelper/: Cargo.toml
2022/rust/SantasLittleHelper/src/: lib.rs
2022/rust/day01/src/: main.rs
2022/rust/day02/: Cargo.toml
2022/rust/day02/src/: main.rs
2023/: .gitignore
2023/python/: day01.py
2023/rust/: Cargo.toml
2024/: day01.py
2024/day04/: day04.py
2024/day05/: day05.py
2024/day06/: day06.py
2024/day08/: day08.py
2024/day09/: day09.py
2024/day10/: day10.py
2024/day13/: day13.py
2024/day14/: day14.py
2024/day15/: day15.py
2024/day16/: day16.py
2024/day17/: day17.py
2024/day18/: day18.py
2024/day20/: day20.py
2025/: day01.py
2025/day01/: day01.py
2025/day02/: day02.py
2025/day03/: day03.py
2025/day04/: day04.py
(+51 files in other folders)
